--- a/.env.example
+++ b/.env.example
@@ -44,10 +44,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 # N8N Upload URL - Webhook URL for uploading files to N8N workflow
-N8N_UPLOAD_URL=
+N8N_UPLOAD_URL=https://automation.artslabcreatives.com/webhook/5a20a8b2-6853-4fac-b040-1fea5fca974e
 
 # N8N Marking URL - Webhook URL for triggering AI marking workflow
-N8N_MARKING_URL=
+N8N_MARKING_URL=https://automation.artslabcreatives.com/webhook/5a20a8b2-6853-4fac-b040-1fea5fca974e
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -63,3 +63,4 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
